knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Red_Phone__c.field-meta.xml
<CustomField>
    <fullName>Red_Phone__c</fullName>
    <label>Red Phone</label>
    <type>Phone</type>
</CustomField>