knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Remote_Training_Available__c.field-meta.xml
<CustomField>
    <fullName>Remote_Training_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Training Available</label>
    <type>Checkbox</type>
</CustomField>