knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/RVU__c.field-meta.xml
<CustomField>
    <fullName>RVU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RVU</label>
    <type>Checkbox</type>
</CustomField>