knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Sane_Cases_Billed__c.field-meta.xml
<CustomField>
    <fullName>Sane_Cases_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sane Cases Billed</label>
    <type>Checkbox</type>
</CustomField>