knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Scanner_Name__c.field-meta.xml
<CustomField>
    <fullName>Scanner_Name__c</fullName>
    <label>Scanner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>