knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Scanner_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Scanner_Serial_Number__c</fullName>
    <label>Scanner Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>