knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/SCP_Health_EMR_Trainer_Access__c.field-meta.xml
<CustomField>
    <fullName>SCP_Health_EMR_Trainer_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCP Health EMR Trainer Access</label>
    <type>Checkbox</type>
</CustomField>