knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Scribe_Company__c.field-meta.xml
<CustomField>
    <fullName>Scribe_Company__c</fullName>
    <label>Scribe Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>