knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Scribe_Program_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Scribe_Program_Termination_Date__c</fullName>
    <label>Scribe Program Termination Date</label>
    <type>Date</type>
</CustomField>