knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Special_Rule__c.field-meta.xml
<CustomField>
    <fullName>Special_Rule__c</fullName>
    <label>Special Rule</label>
    <type>TextArea</type>
</CustomField>