knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Stray_and_Deficiency_Chart_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Stray_and_Deficiency_Chart_Acquisition__c</fullName>
    <label>Stray and Deficiency Chart Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hospital Electronic Feed</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>SG Decentralized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>