knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Super_User__c.field-meta.xml
<CustomField>
    <fullName>Super_User__c</fullName>
    <label>Super User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>