knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/T_System_Licensure__c.field-meta.xml
<CustomField>
    <fullName>T_System_Licensure__c</fullName>
    <label>T-System Licensure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SG - T-System</fullName>
            </value>
            <value>
                <fullName>T-System - Facility</fullName>
            </value>
            <value>
                <fullName>No Licensure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>