knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Training_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Training_Requirements__c</fullName>
    <label>Training Requirements</label>
    <type>TextArea</type>
</CustomField>