knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Training_Time_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Training_Time_Requirements__c</fullName>
    <label>Training Time Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 2 hrs</fullName>
            </value>
            <value>
                <fullName>2-4 hrs</fullName>
            </value>
            <value>
                <fullName>4-6hrs</fullName>
            </value>
            <value>
                <fullName>&gt; 8hrs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>