knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Triage_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Triage_Provider_Type__c</fullName>
    <label>Triage Provider Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD/DO</fullName>
            </value>
            <value>
                <fullName>NP/PA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>