knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Type_of_Patient_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Patient_Tracking__c</fullName>
    <label>Type of Facility Data System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allegra</fullName>
            </value>
            <value>
                <fullName>Allscripts</fullName>
            </value>
            <value>
                <fullName>Care Connection</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>CPSI</fullName>
            </value>
            <value>
                <fullName>EPIC</fullName>
            </value>
            <value>
                <fullName>HPF</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>Medhost</fullName>
            </value>
            <value>
                <fullName>Meditech</fullName>
            </value>
            <value>
                <fullName>MPF</fullName>
            </value>
            <value>
                <fullName>OneContent</fullName>
            </value>
            <value>
                <fullName>Paragon</fullName>
            </value>
            <value>
                <fullName>Soarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>