knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Vendor_Training_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Training_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Training Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facility Profiles (Vendor Training Contact)</relationshipLabel>
    <relationshipName>R00N40000001iS97EAE</relationshipName>
    <type>Lookup</type>
</CustomField>