knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Version_of_PD__c.field-meta.xml
<CustomField>
    <fullName>Version_of_PD__c</fullName>
    <label>Version of PD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>