knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Version_of_scheduled_EMR__c.field-meta.xml
<CustomField>
    <fullName>Version_of_scheduled_EMR__c</fullName>
    <label>Version of scheduled EMR</label>
    <type>TextArea</type>
</CustomField>