knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Version_of_Tracking_Board_EMR__c.field-meta.xml
<CustomField>
    <fullName>Version_of_Tracking_Board_EMR__c</fullName>
    <label>Version of Tracking Board EMR</label>
    <type>TextArea</type>
</CustomField>