knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/White_Board__c.field-meta.xml
<CustomField>
    <fullName>White_Board__c</fullName>
    <defaultValue>false</defaultValue>
    <label>White Board</label>
    <type>Checkbox</type>
</CustomField>